// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TrainingForm/> should edit the training 1`] = `
<div>
  <form
    action="#"
    data-testid="training-form-form"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-justify-xs-flex-end"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
      >
        <div
          class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
          data-testid="training-form-name"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root makeStyles-label-28 MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-filled MuiFormLabel-filled"
            data-shrink="true"
          >
            Enter training name
          </label>
          <div
            class="MuiInputBase-root MuiFilledInput-root makeStyles-filledRoot-27 makeStyles-filledRoot-29 MuiInputBase-fullWidth MuiInputBase-formControl"
          >
            <input
              aria-invalid="false"
              class="MuiInputBase-input MuiFilledInput-input"
              name="label"
              type="text"
              value="Training label"
            />
          </div>
        </div>
        <div
          class="MuiCollapse-container MuiCollapse-hidden"
          style="min-height: 0px;"
        >
          <div
            class="MuiCollapse-wrapper"
          >
            <div
              class="MuiCollapse-wrapperInner"
            >
              <p
                class="MuiFormHelperText-root MuiFormHelperText-contained"
              >
                <span>
                  ​
                </span>
              </p>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
      >
        <div
          class="MuiGrid-root MuiBox-root MuiBox-root-40 makeStyles-wrapper-33 MuiGrid-container MuiGrid-spacing-xs-1"
          data-rbd-droppable-context-id="2"
          data-rbd-droppable-id="media-list"
        >
          <div
            aria-describedby="rbd-hidden-text-2-hidden-text-4"
            class="MuiGrid-root MuiBox-root MuiBox-root-347 MuiGrid-item MuiGrid-grid-xs-12"
            data-rbd-drag-handle-context-id="2"
            data-rbd-drag-handle-draggable-id="d7a11f43-9157-5859-80f8-4c1fbdb8d78f"
            data-rbd-draggable-context-id="2"
            data-rbd-draggable-id="d7a11f43-9157-5859-80f8-4c1fbdb8d78f"
            draggable="false"
            role="button"
            tabindex="0"
          >
            <li
              class="MuiListItem-container"
            >
              <div
                class="MuiBox-root MuiBox-root-351 MuiListItem-root makeStyles-root-42 makeStyles-editableItem-30 MuiListItem-gutters MuiListItem-alignItemsFlexStart MuiListItem-secondaryAction makeStyles-root-50"
                data-testid="media-list-item"
              >
                <div
                  class="makeStyles-image-44 makeStyles-image-348"
                />
                <div
                  class="MuiListItemText-root makeStyles-textRoot-46 makeStyles-textRoot-350"
                >
                  <span
                    class="MuiTypography-root MuiListItemText-primary makeStyles-primaryText-45 makeStyles-primaryText-349 MuiTypography-body1 MuiTypography-displayBlock"
                  >
                    Cuh wit janufizo usa hi mafob ebma giskoupe zol eg demjo cef mo erdeko cudpiv.
                  </span>
                </div>
              </div>
              <div
                class="MuiListItemSecondaryAction-root makeStyles-editableItemSecondaryAction-32"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M18.3 5.71a.9959.9959 0 00-1.41 0L12 10.59 7.11 5.7a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
                  />
                </svg>
              </div>
            </li>
          </div>
          <div
            aria-describedby="rbd-hidden-text-2-hidden-text-4"
            class="MuiGrid-root MuiBox-root MuiBox-root-352 MuiGrid-item MuiGrid-grid-xs-12"
            data-rbd-drag-handle-context-id="2"
            data-rbd-drag-handle-draggable-id="d4afac19-e8d3-562d-bde6-1d1cac90adf5"
            data-rbd-draggable-context-id="2"
            data-rbd-draggable-id="d4afac19-e8d3-562d-bde6-1d1cac90adf5"
            draggable="false"
            role="button"
            tabindex="0"
          >
            <li
              class="MuiListItem-container"
            >
              <div
                class="MuiBox-root MuiBox-root-356 MuiListItem-root makeStyles-root-42 makeStyles-editableItem-30 MuiListItem-gutters MuiListItem-alignItemsFlexStart MuiListItem-secondaryAction makeStyles-root-50"
                data-testid="media-list-item"
              >
                <div
                  class="makeStyles-image-44 makeStyles-image-353"
                />
                <div
                  class="MuiListItemText-root makeStyles-textRoot-46 makeStyles-textRoot-355"
                >
                  <span
                    class="MuiTypography-root MuiListItemText-primary makeStyles-primaryText-45 makeStyles-primaryText-354 MuiTypography-body1 MuiTypography-displayBlock"
                  >
                    Oke kad iku ez ime kuere cigom luze zakef ac aconki kekefjud voswulun kepdub optiowa.
                  </span>
                </div>
              </div>
              <div
                class="MuiListItemSecondaryAction-root makeStyles-editableItemSecondaryAction-32"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M18.3 5.71a.9959.9959 0 00-1.41 0L12 10.59 7.11 5.7a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
                  />
                </svg>
              </div>
            </li>
          </div>
          <div
            aria-describedby="rbd-hidden-text-2-hidden-text-4"
            class="MuiGrid-root MuiBox-root MuiBox-root-357 MuiGrid-item MuiGrid-grid-xs-12"
            data-rbd-drag-handle-context-id="2"
            data-rbd-drag-handle-draggable-id="bde96481-f7db-5f20-8b2c-86dcee377e54"
            data-rbd-draggable-context-id="2"
            data-rbd-draggable-id="bde96481-f7db-5f20-8b2c-86dcee377e54"
            draggable="false"
            role="button"
            tabindex="0"
          >
            <li
              class="MuiListItem-container"
            >
              <div
                class="MuiBox-root MuiBox-root-361 MuiListItem-root makeStyles-root-42 makeStyles-editableItem-30 MuiListItem-gutters MuiListItem-alignItemsFlexStart MuiListItem-secondaryAction makeStyles-root-50"
                data-testid="media-list-item"
              >
                <div
                  class="makeStyles-image-44 makeStyles-image-358"
                />
                <div
                  class="MuiListItemText-root makeStyles-textRoot-46 makeStyles-textRoot-360"
                >
                  <span
                    class="MuiTypography-root MuiListItemText-primary makeStyles-primaryText-45 makeStyles-primaryText-359 MuiTypography-body1 MuiTypography-displayBlock"
                  >
                    Vejelav ki rem reput fih buwolah jek locohgiz setoeta unitez tafuzemo ras roru ri kadav mezwap.
                  </span>
                </div>
              </div>
              <div
                class="MuiListItemSecondaryAction-root makeStyles-editableItemSecondaryAction-32"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M18.3 5.71a.9959.9959 0 00-1.41 0L12 10.59 7.11 5.7a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
                  />
                </svg>
              </div>
            </li>
          </div>
          <div
            aria-describedby="rbd-hidden-text-2-hidden-text-4"
            class="MuiGrid-root MuiBox-root MuiBox-root-362 MuiGrid-item MuiGrid-grid-xs-12"
            data-rbd-drag-handle-context-id="2"
            data-rbd-drag-handle-draggable-id="1e974d9a-41c9-50a0-a2b7-e56c24c5a433"
            data-rbd-draggable-context-id="2"
            data-rbd-draggable-id="1e974d9a-41c9-50a0-a2b7-e56c24c5a433"
            draggable="false"
            role="button"
            tabindex="0"
          >
            <li
              class="MuiListItem-container"
            >
              <div
                class="MuiBox-root MuiBox-root-366 MuiListItem-root makeStyles-root-42 makeStyles-editableItem-30 MuiListItem-gutters MuiListItem-alignItemsFlexStart MuiListItem-secondaryAction makeStyles-root-50"
                data-testid="media-list-item"
              >
                <div
                  class="makeStyles-image-44 makeStyles-image-363"
                />
                <div
                  class="MuiListItemText-root makeStyles-textRoot-46 makeStyles-textRoot-365"
                >
                  <span
                    class="MuiTypography-root MuiListItemText-primary makeStyles-primaryText-45 makeStyles-primaryText-364 MuiTypography-body1 MuiTypography-displayBlock"
                  >
                    Kozbuno lipolam we ovopu mofasmev ruci modkurne he tifufig em jucjana ka ow bago rombadki hidoc.
                  </span>
                </div>
              </div>
              <div
                class="MuiListItemSecondaryAction-root makeStyles-editableItemSecondaryAction-32"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M18.3 5.71a.9959.9959 0 00-1.41 0L12 10.59 7.11 5.7a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
                  />
                </svg>
              </div>
            </li>
          </div>
          <div
            aria-describedby="rbd-hidden-text-2-hidden-text-4"
            class="MuiGrid-root MuiBox-root MuiBox-root-367 MuiGrid-item MuiGrid-grid-xs-12"
            data-rbd-drag-handle-context-id="2"
            data-rbd-drag-handle-draggable-id="2e56e1fd-02d3-5726-a5eb-5a761b2d80d0"
            data-rbd-draggable-context-id="2"
            data-rbd-draggable-id="2e56e1fd-02d3-5726-a5eb-5a761b2d80d0"
            draggable="false"
            role="button"
            tabindex="0"
          >
            <li
              class="MuiListItem-container"
            >
              <div
                class="MuiBox-root MuiBox-root-371 MuiListItem-root makeStyles-root-42 makeStyles-editableItem-30 MuiListItem-gutters MuiListItem-alignItemsFlexStart MuiListItem-secondaryAction makeStyles-root-50"
                data-testid="media-list-item"
              >
                <div
                  class="makeStyles-image-44 makeStyles-image-368"
                />
                <div
                  class="MuiListItemText-root makeStyles-textRoot-46 makeStyles-textRoot-370"
                >
                  <span
                    class="MuiTypography-root MuiListItemText-primary makeStyles-primaryText-45 makeStyles-primaryText-369 MuiTypography-body1 MuiTypography-displayBlock"
                  >
                    Hikpeuku wez vojsuf hatu mejci wujuvuz kados ufa rutaw nid madbik canida ritne kug jorwi hiwagna nomgitab jadu.
                  </span>
                </div>
              </div>
              <div
                class="MuiListItemSecondaryAction-root makeStyles-editableItemSecondaryAction-32"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M18.3 5.71a.9959.9959 0 00-1.41 0L12 10.59 7.11 5.7a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
                  />
                </svg>
              </div>
            </li>
          </div>
          <div
            aria-describedby="rbd-hidden-text-2-hidden-text-4"
            class="MuiGrid-root MuiBox-root MuiBox-root-372 MuiGrid-item MuiGrid-grid-xs-12"
            data-rbd-drag-handle-context-id="2"
            data-rbd-drag-handle-draggable-id="9205d8f1-b10d-5526-916d-613e53c8386e"
            data-rbd-draggable-context-id="2"
            data-rbd-draggable-id="9205d8f1-b10d-5526-916d-613e53c8386e"
            draggable="false"
            role="button"
            tabindex="0"
          >
            <li
              class="MuiListItem-container"
            >
              <div
                class="MuiBox-root MuiBox-root-376 MuiListItem-root makeStyles-root-42 makeStyles-editableItem-30 MuiListItem-gutters MuiListItem-alignItemsFlexStart MuiListItem-secondaryAction makeStyles-root-50"
                data-testid="media-list-item"
              >
                <div
                  class="makeStyles-image-44 makeStyles-image-373"
                />
                <div
                  class="MuiListItemText-root makeStyles-textRoot-46 makeStyles-textRoot-375"
                >
                  <span
                    class="MuiTypography-root MuiListItemText-primary makeStyles-primaryText-45 makeStyles-primaryText-374 MuiTypography-body1 MuiTypography-displayBlock"
                  >
                    Biflo icbiil zapiw ugipo duwfo du bac canpanzav ico cuvaksos era be keopi.
                  </span>
                </div>
              </div>
              <div
                class="MuiListItemSecondaryAction-root makeStyles-editableItemSecondaryAction-32"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M18.3 5.71a.9959.9959 0 00-1.41 0L12 10.59 7.11 5.7a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
                  />
                </svg>
              </div>
            </li>
          </div>
          <div
            aria-describedby="rbd-hidden-text-2-hidden-text-4"
            class="MuiGrid-root MuiBox-root MuiBox-root-377 MuiGrid-item MuiGrid-grid-xs-12"
            data-rbd-drag-handle-context-id="2"
            data-rbd-drag-handle-draggable-id="91ac0cbd-b502-52bc-a03f-f0e22f240930"
            data-rbd-draggable-context-id="2"
            data-rbd-draggable-id="91ac0cbd-b502-52bc-a03f-f0e22f240930"
            draggable="false"
            role="button"
            tabindex="0"
          >
            <li
              class="MuiListItem-container"
            >
              <div
                class="MuiBox-root MuiBox-root-381 MuiListItem-root makeStyles-root-42 makeStyles-editableItem-30 MuiListItem-gutters MuiListItem-alignItemsFlexStart MuiListItem-secondaryAction makeStyles-root-50"
                data-testid="media-list-item"
              >
                <div
                  class="makeStyles-image-44 makeStyles-image-378"
                />
                <div
                  class="MuiListItemText-root makeStyles-textRoot-46 makeStyles-textRoot-380"
                >
                  <span
                    class="MuiTypography-root MuiListItemText-primary makeStyles-primaryText-45 makeStyles-primaryText-379 MuiTypography-body1 MuiTypography-displayBlock"
                  >
                    Ev viglurupi sogdag pewo piec jel sihil im hisrok he joziha suikefu mewo fiw azecejiho sosoar.
                  </span>
                </div>
              </div>
              <div
                class="MuiListItemSecondaryAction-root makeStyles-editableItemSecondaryAction-32"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M18.3 5.71a.9959.9959 0 00-1.41 0L12 10.59 7.11 5.7a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
                  />
                </svg>
              </div>
            </li>
          </div>
          <div
            aria-describedby="rbd-hidden-text-2-hidden-text-4"
            class="MuiGrid-root MuiBox-root MuiBox-root-382 MuiGrid-item MuiGrid-grid-xs-12"
            data-rbd-drag-handle-context-id="2"
            data-rbd-drag-handle-draggable-id="af5ff21a-4ccd-5332-b1e8-86bc89dacd2c"
            data-rbd-draggable-context-id="2"
            data-rbd-draggable-id="af5ff21a-4ccd-5332-b1e8-86bc89dacd2c"
            draggable="false"
            role="button"
            tabindex="0"
          >
            <li
              class="MuiListItem-container"
            >
              <div
                class="MuiBox-root MuiBox-root-386 MuiListItem-root makeStyles-root-42 makeStyles-editableItem-30 MuiListItem-gutters MuiListItem-alignItemsFlexStart MuiListItem-secondaryAction makeStyles-root-50"
                data-testid="media-list-item"
              >
                <div
                  class="makeStyles-image-44 makeStyles-image-383"
                />
                <div
                  class="MuiListItemText-root makeStyles-textRoot-46 makeStyles-textRoot-385"
                >
                  <span
                    class="MuiTypography-root MuiListItemText-primary makeStyles-primaryText-45 makeStyles-primaryText-384 MuiTypography-body1 MuiTypography-displayBlock"
                  >
                    Zemore kitop ucvewa de lamhekab hag ila ilulifnu udowep fepusbuh jeef lonjupif ve ho.
                  </span>
                </div>
              </div>
              <div
                class="MuiListItemSecondaryAction-root makeStyles-editableItemSecondaryAction-32"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M18.3 5.71a.9959.9959 0 00-1.41 0L12 10.59 7.11 5.7a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
                  />
                </svg>
              </div>
            </li>
          </div>
          <div
            aria-describedby="rbd-hidden-text-2-hidden-text-4"
            class="MuiGrid-root MuiBox-root MuiBox-root-387 MuiGrid-item MuiGrid-grid-xs-12"
            data-rbd-drag-handle-context-id="2"
            data-rbd-drag-handle-draggable-id="18b39488-1855-53a4-b840-db4409b11e6c"
            data-rbd-draggable-context-id="2"
            data-rbd-draggable-id="18b39488-1855-53a4-b840-db4409b11e6c"
            draggable="false"
            role="button"
            tabindex="0"
          >
            <li
              class="MuiListItem-container"
            >
              <div
                class="MuiBox-root MuiBox-root-391 MuiListItem-root makeStyles-root-42 makeStyles-editableItem-30 MuiListItem-gutters MuiListItem-alignItemsFlexStart MuiListItem-secondaryAction makeStyles-root-50"
                data-testid="media-list-item"
              >
                <div
                  class="makeStyles-image-44 makeStyles-image-388"
                />
                <div
                  class="MuiListItemText-root makeStyles-textRoot-46 makeStyles-textRoot-390"
                >
                  <span
                    class="MuiTypography-root MuiListItemText-primary makeStyles-primaryText-45 makeStyles-primaryText-389 MuiTypography-body1 MuiTypography-displayBlock"
                  >
                    Ge so azebewo jocufci nise ci pi go mom poozgu anluduh tanfotumo dak lo ucu vamed.
                  </span>
                </div>
              </div>
              <div
                class="MuiListItemSecondaryAction-root makeStyles-editableItemSecondaryAction-32"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M18.3 5.71a.9959.9959 0 00-1.41 0L12 10.59 7.11 5.7a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
                  />
                </svg>
              </div>
            </li>
          </div>
          <div
            aria-describedby="rbd-hidden-text-2-hidden-text-4"
            class="MuiGrid-root MuiBox-root MuiBox-root-392 MuiGrid-item MuiGrid-grid-xs-12"
            data-rbd-drag-handle-context-id="2"
            data-rbd-drag-handle-draggable-id="e4609281-fb81-5a5b-9cb7-b62c86d76de5"
            data-rbd-draggable-context-id="2"
            data-rbd-draggable-id="e4609281-fb81-5a5b-9cb7-b62c86d76de5"
            draggable="false"
            role="button"
            tabindex="0"
          >
            <li
              class="MuiListItem-container"
            >
              <div
                class="MuiBox-root MuiBox-root-396 MuiListItem-root makeStyles-root-42 makeStyles-editableItem-30 MuiListItem-gutters MuiListItem-alignItemsFlexStart MuiListItem-secondaryAction makeStyles-root-50"
                data-testid="media-list-item"
              >
                <div
                  class="makeStyles-image-44 makeStyles-image-393"
                />
                <div
                  class="MuiListItemText-root makeStyles-textRoot-46 makeStyles-textRoot-395"
                >
                  <span
                    class="MuiTypography-root MuiListItemText-primary makeStyles-primaryText-45 makeStyles-primaryText-394 MuiTypography-body1 MuiTypography-displayBlock"
                  >
                    Ripiv pusdouk na zugi ji golve vignod fah ilo sufka ov osa cek zo.
                  </span>
                </div>
              </div>
              <div
                class="MuiListItemSecondaryAction-root makeStyles-editableItemSecondaryAction-32"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M18.3 5.71a.9959.9959 0 00-1.41 0L12 10.59 7.11 5.7a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
                  />
                </svg>
              </div>
            </li>
          </div>
          <div
            aria-describedby="rbd-hidden-text-2-hidden-text-4"
            class="MuiGrid-root MuiBox-root MuiBox-root-397 MuiGrid-item MuiGrid-grid-xs-12"
            data-rbd-drag-handle-context-id="2"
            data-rbd-drag-handle-draggable-id="006bbe9b-bfb0-594a-a833-9800997ae493"
            data-rbd-draggable-context-id="2"
            data-rbd-draggable-id="006bbe9b-bfb0-594a-a833-9800997ae493"
            draggable="false"
            role="button"
            tabindex="0"
          >
            <li
              class="MuiListItem-container"
            >
              <div
                class="MuiBox-root MuiBox-root-401 MuiListItem-root makeStyles-root-42 makeStyles-editableItem-30 MuiListItem-gutters MuiListItem-alignItemsFlexStart MuiListItem-secondaryAction makeStyles-root-50"
                data-testid="media-list-item"
              >
                <div
                  class="makeStyles-image-44 makeStyles-image-398"
                />
                <div
                  class="MuiListItemText-root makeStyles-textRoot-46 makeStyles-textRoot-400"
                >
                  <span
                    class="MuiTypography-root MuiListItemText-primary makeStyles-primaryText-45 makeStyles-primaryText-399 MuiTypography-body1 MuiTypography-displayBlock"
                  >
                    Becakanij nepav tud fokrigso hatuzeesa jeliw ifkor da wicualo gerbu ike liginjup ikpabdec ci ijovuroz ka suculev.
                  </span>
                </div>
              </div>
              <div
                class="MuiListItemSecondaryAction-root makeStyles-editableItemSecondaryAction-32"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M18.3 5.71a.9959.9959 0 00-1.41 0L12 10.59 7.11 5.7a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
                  />
                </svg>
              </div>
            </li>
          </div>
          <div
            aria-describedby="rbd-hidden-text-2-hidden-text-4"
            class="MuiGrid-root MuiBox-root MuiBox-root-402 MuiGrid-item MuiGrid-grid-xs-12"
            data-rbd-drag-handle-context-id="2"
            data-rbd-drag-handle-draggable-id="0c518a68-ab4d-5e67-97dd-c7afb098c415"
            data-rbd-draggable-context-id="2"
            data-rbd-draggable-id="0c518a68-ab4d-5e67-97dd-c7afb098c415"
            draggable="false"
            role="button"
            tabindex="0"
          >
            <li
              class="MuiListItem-container"
            >
              <div
                class="MuiBox-root MuiBox-root-406 MuiListItem-root makeStyles-root-42 makeStyles-editableItem-30 MuiListItem-gutters MuiListItem-alignItemsFlexStart MuiListItem-secondaryAction makeStyles-root-50"
                data-testid="media-list-item"
              >
                <div
                  class="makeStyles-image-44 makeStyles-image-403"
                />
                <div
                  class="MuiListItemText-root makeStyles-textRoot-46 makeStyles-textRoot-405"
                >
                  <span
                    class="MuiTypography-root MuiListItemText-primary makeStyles-primaryText-45 makeStyles-primaryText-404 MuiTypography-body1 MuiTypography-displayBlock"
                  >
                    Izuesetu munuviw onozon dafadcac gusugid izajolec fonil buunho tihdinho buksak hudfunler ub matvait sukucul ez atifi sig gi.
                  </span>
                </div>
              </div>
              <div
                class="MuiListItemSecondaryAction-root makeStyles-editableItemSecondaryAction-32"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M18.3 5.71a.9959.9959 0 00-1.41 0L12 10.59 7.11 5.7a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
                  />
                </svg>
              </div>
            </li>
          </div>
          <div
            aria-describedby="rbd-hidden-text-2-hidden-text-4"
            class="MuiGrid-root MuiBox-root MuiBox-root-407 MuiGrid-item MuiGrid-grid-xs-12"
            data-rbd-drag-handle-context-id="2"
            data-rbd-drag-handle-draggable-id="ae90b9f0-638d-58df-9199-41599fea4b4b"
            data-rbd-draggable-context-id="2"
            data-rbd-draggable-id="ae90b9f0-638d-58df-9199-41599fea4b4b"
            draggable="false"
            role="button"
            tabindex="0"
          >
            <li
              class="MuiListItem-container"
            >
              <div
                class="MuiBox-root MuiBox-root-411 MuiListItem-root makeStyles-root-42 makeStyles-editableItem-30 MuiListItem-gutters MuiListItem-alignItemsFlexStart MuiListItem-secondaryAction makeStyles-root-50"
                data-testid="media-list-item"
              >
                <div
                  class="makeStyles-image-44 makeStyles-image-408"
                />
                <div
                  class="MuiListItemText-root makeStyles-textRoot-46 makeStyles-textRoot-410"
                >
                  <span
                    class="MuiTypography-root MuiListItemText-primary makeStyles-primaryText-45 makeStyles-primaryText-409 MuiTypography-body1 MuiTypography-displayBlock"
                  >
                    Fo je ke nupri nidijpoj fesbokso bog mogolu as gabzas ohju tavruni fomdeeb.
                  </span>
                </div>
              </div>
              <div
                class="MuiListItemSecondaryAction-root makeStyles-editableItemSecondaryAction-32"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M18.3 5.71a.9959.9959 0 00-1.41 0L12 10.59 7.11 5.7a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
                  />
                </svg>
              </div>
            </li>
          </div>
          <div
            aria-describedby="rbd-hidden-text-2-hidden-text-4"
            class="MuiGrid-root MuiBox-root MuiBox-root-412 MuiGrid-item MuiGrid-grid-xs-12"
            data-rbd-drag-handle-context-id="2"
            data-rbd-drag-handle-draggable-id="d29fa95b-18c6-55b4-ab95-8b7d74a644b9"
            data-rbd-draggable-context-id="2"
            data-rbd-draggable-id="d29fa95b-18c6-55b4-ab95-8b7d74a644b9"
            draggable="false"
            role="button"
            tabindex="0"
          >
            <li
              class="MuiListItem-container"
            >
              <div
                class="MuiBox-root MuiBox-root-416 MuiListItem-root makeStyles-root-42 makeStyles-editableItem-30 MuiListItem-gutters MuiListItem-alignItemsFlexStart MuiListItem-secondaryAction makeStyles-root-50"
                data-testid="media-list-item"
              >
                <div
                  class="makeStyles-image-44 makeStyles-image-413"
                />
                <div
                  class="MuiListItemText-root makeStyles-textRoot-46 makeStyles-textRoot-415"
                >
                  <span
                    class="MuiTypography-root MuiListItemText-primary makeStyles-primaryText-45 makeStyles-primaryText-414 MuiTypography-body1 MuiTypography-displayBlock"
                  >
                    Nemefu gi ta aci guewocuz cuz ba ah ilgufim irli vo kejzi idde visevatak ju su.
                  </span>
                </div>
              </div>
              <div
                class="MuiListItemSecondaryAction-root makeStyles-editableItemSecondaryAction-32"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M18.3 5.71a.9959.9959 0 00-1.41 0L12 10.59 7.11 5.7a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
                  />
                </svg>
              </div>
            </li>
          </div>
          <div
            aria-describedby="rbd-hidden-text-2-hidden-text-4"
            class="MuiGrid-root MuiBox-root MuiBox-root-417 MuiGrid-item MuiGrid-grid-xs-12"
            data-rbd-drag-handle-context-id="2"
            data-rbd-drag-handle-draggable-id="0c9fbb51-635b-54e2-b9ef-42717bddd33e"
            data-rbd-draggable-context-id="2"
            data-rbd-draggable-id="0c9fbb51-635b-54e2-b9ef-42717bddd33e"
            draggable="false"
            role="button"
            tabindex="0"
          >
            <li
              class="MuiListItem-container"
            >
              <div
                class="MuiBox-root MuiBox-root-421 MuiListItem-root makeStyles-root-42 makeStyles-editableItem-30 MuiListItem-gutters MuiListItem-alignItemsFlexStart MuiListItem-secondaryAction makeStyles-root-50"
                data-testid="media-list-item"
              >
                <div
                  class="makeStyles-image-44 makeStyles-image-418"
                />
                <div
                  class="MuiListItemText-root makeStyles-textRoot-46 makeStyles-textRoot-420"
                >
                  <span
                    class="MuiTypography-root MuiListItemText-primary makeStyles-primaryText-45 makeStyles-primaryText-419 MuiTypography-body1 MuiTypography-displayBlock"
                  >
                    Ho ubababe pefuw do ralanra nepcogoz dalviku gidasir ilhe ter valih mug jop sop sawucva sag oz lilzulbad.
                  </span>
                </div>
              </div>
              <div
                class="MuiListItemSecondaryAction-root makeStyles-editableItemSecondaryAction-32"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M18.3 5.71a.9959.9959 0 00-1.41 0L12 10.59 7.11 5.7a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
                  />
                </svg>
              </div>
            </li>
          </div>
          <div
            aria-describedby="rbd-hidden-text-2-hidden-text-4"
            class="MuiGrid-root MuiBox-root MuiBox-root-422 MuiGrid-item MuiGrid-grid-xs-12"
            data-rbd-drag-handle-context-id="2"
            data-rbd-drag-handle-draggable-id="3d308cf8-bc64-5a5a-8609-155c8bd73a0d"
            data-rbd-draggable-context-id="2"
            data-rbd-draggable-id="3d308cf8-bc64-5a5a-8609-155c8bd73a0d"
            draggable="false"
            role="button"
            tabindex="0"
          >
            <li
              class="MuiListItem-container"
            >
              <div
                class="MuiBox-root MuiBox-root-426 MuiListItem-root makeStyles-root-42 makeStyles-editableItem-30 MuiListItem-gutters MuiListItem-alignItemsFlexStart MuiListItem-secondaryAction makeStyles-root-50"
                data-testid="media-list-item"
              >
                <div
                  class="makeStyles-image-44 makeStyles-image-423"
                />
                <div
                  class="MuiListItemText-root makeStyles-textRoot-46 makeStyles-textRoot-425"
                >
                  <span
                    class="MuiTypography-root MuiListItemText-primary makeStyles-primaryText-45 makeStyles-primaryText-424 MuiTypography-body1 MuiTypography-displayBlock"
                  >
                    Muverisar ala for hapkav duppido humhi mudzo fadjugku nuwsik mi cebma en jirlemih vaudman cunwaka baparpis sa nobal.
                  </span>
                </div>
              </div>
              <div
                class="MuiListItemSecondaryAction-root makeStyles-editableItemSecondaryAction-32"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M18.3 5.71a.9959.9959 0 00-1.41 0L12 10.59 7.11 5.7a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
                  />
                </svg>
              </div>
            </li>
          </div>
          <div
            aria-describedby="rbd-hidden-text-2-hidden-text-4"
            class="MuiGrid-root MuiBox-root MuiBox-root-427 MuiGrid-item MuiGrid-grid-xs-12"
            data-rbd-drag-handle-context-id="2"
            data-rbd-drag-handle-draggable-id="39bb6138-a6cb-50db-bf51-6429a68795f3"
            data-rbd-draggable-context-id="2"
            data-rbd-draggable-id="39bb6138-a6cb-50db-bf51-6429a68795f3"
            draggable="false"
            role="button"
            tabindex="0"
          >
            <li
              class="MuiListItem-container"
            >
              <div
                class="MuiBox-root MuiBox-root-431 MuiListItem-root makeStyles-root-42 makeStyles-editableItem-30 MuiListItem-gutters MuiListItem-alignItemsFlexStart MuiListItem-secondaryAction makeStyles-root-50"
                data-testid="media-list-item"
              >
                <div
                  class="makeStyles-image-44 makeStyles-image-428"
                />
                <div
                  class="MuiListItemText-root makeStyles-textRoot-46 makeStyles-textRoot-430"
                >
                  <span
                    class="MuiTypography-root MuiListItemText-primary makeStyles-primaryText-45 makeStyles-primaryText-429 MuiTypography-body1 MuiTypography-displayBlock"
                  >
                    Nowbok si ja gewguh zofep oha pohij diso sakoho lip jir benbes.
                  </span>
                </div>
              </div>
              <div
                class="MuiListItemSecondaryAction-root makeStyles-editableItemSecondaryAction-32"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M18.3 5.71a.9959.9959 0 00-1.41 0L12 10.59 7.11 5.7a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
                  />
                </svg>
              </div>
            </li>
          </div>
          <div
            aria-describedby="rbd-hidden-text-2-hidden-text-4"
            class="MuiGrid-root MuiBox-root MuiBox-root-432 MuiGrid-item MuiGrid-grid-xs-12"
            data-rbd-drag-handle-context-id="2"
            data-rbd-drag-handle-draggable-id="16c3b87d-7a8c-515b-9ece-4eab80b4c553"
            data-rbd-draggable-context-id="2"
            data-rbd-draggable-id="16c3b87d-7a8c-515b-9ece-4eab80b4c553"
            draggable="false"
            role="button"
            tabindex="0"
          >
            <li
              class="MuiListItem-container"
            >
              <div
                class="MuiBox-root MuiBox-root-436 MuiListItem-root makeStyles-root-42 makeStyles-editableItem-30 MuiListItem-gutters MuiListItem-alignItemsFlexStart MuiListItem-secondaryAction makeStyles-root-50"
                data-testid="media-list-item"
              >
                <div
                  class="makeStyles-image-44 makeStyles-image-433"
                />
                <div
                  class="MuiListItemText-root makeStyles-textRoot-46 makeStyles-textRoot-435"
                >
                  <span
                    class="MuiTypography-root MuiListItemText-primary makeStyles-primaryText-45 makeStyles-primaryText-434 MuiTypography-body1 MuiTypography-displayBlock"
                  >
                    Ogi miwouc lerepnu kuv zo mubah fanuzva da ojaepfej fe po tu tatco pavava cosobin mi ajletu.
                  </span>
                </div>
              </div>
              <div
                class="MuiListItemSecondaryAction-root makeStyles-editableItemSecondaryAction-32"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M18.3 5.71a.9959.9959 0 00-1.41 0L12 10.59 7.11 5.7a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
                  />
                </svg>
              </div>
            </li>
          </div>
          <div
            aria-describedby="rbd-hidden-text-2-hidden-text-4"
            class="MuiGrid-root MuiBox-root MuiBox-root-437 MuiGrid-item MuiGrid-grid-xs-12"
            data-rbd-drag-handle-context-id="2"
            data-rbd-drag-handle-draggable-id="3b260e7e-6aec-5d46-8dcb-0f73ad5b48e2"
            data-rbd-draggable-context-id="2"
            data-rbd-draggable-id="3b260e7e-6aec-5d46-8dcb-0f73ad5b48e2"
            draggable="false"
            role="button"
            tabindex="0"
          >
            <li
              class="MuiListItem-container"
            >
              <div
                class="MuiBox-root MuiBox-root-441 MuiListItem-root makeStyles-root-42 makeStyles-editableItem-30 MuiListItem-gutters MuiListItem-alignItemsFlexStart MuiListItem-secondaryAction makeStyles-root-50"
                data-testid="media-list-item"
              >
                <div
                  class="makeStyles-image-44 makeStyles-image-438"
                />
                <div
                  class="MuiListItemText-root makeStyles-textRoot-46 makeStyles-textRoot-440"
                >
                  <span
                    class="MuiTypography-root MuiListItemText-primary makeStyles-primaryText-45 makeStyles-primaryText-439 MuiTypography-body1 MuiTypography-displayBlock"
                  >
                    Zahik lu fuajadin bo wo ehteke da samma he oruwe rervamte fafnujnez.
                  </span>
                </div>
              </div>
              <div
                class="MuiListItemSecondaryAction-root makeStyles-editableItemSecondaryAction-32"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M18.3 5.71a.9959.9959 0 00-1.41 0L12 10.59 7.11 5.7a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
                  />
                </svg>
              </div>
            </li>
          </div>
          <div
            aria-describedby="rbd-hidden-text-2-hidden-text-4"
            class="MuiGrid-root MuiBox-root MuiBox-root-442 MuiGrid-item MuiGrid-grid-xs-12"
            data-rbd-drag-handle-context-id="2"
            data-rbd-drag-handle-draggable-id="c2114bdf-8bdd-524b-afef-40e33c2a438d"
            data-rbd-draggable-context-id="2"
            data-rbd-draggable-id="c2114bdf-8bdd-524b-afef-40e33c2a438d"
            draggable="false"
            role="button"
            tabindex="0"
          >
            <li
              class="MuiListItem-container"
            >
              <div
                class="MuiBox-root MuiBox-root-446 MuiListItem-root makeStyles-root-42 makeStyles-editableItem-30 MuiListItem-gutters MuiListItem-alignItemsFlexStart MuiListItem-secondaryAction makeStyles-root-50"
                data-testid="media-list-item"
              >
                <div
                  class="makeStyles-image-44 makeStyles-image-443"
                />
                <div
                  class="MuiListItemText-root makeStyles-textRoot-46 makeStyles-textRoot-445"
                >
                  <span
                    class="MuiTypography-root MuiListItemText-primary makeStyles-primaryText-45 makeStyles-primaryText-444 MuiTypography-body1 MuiTypography-displayBlock"
                  >
                    Tajomu ircimod taisu ovono jojovoju dejbej fa sut jiifla kuvje hi bi torogop jopa jejissaw calu.
                  </span>
                </div>
              </div>
              <div
                class="MuiListItemSecondaryAction-root makeStyles-editableItemSecondaryAction-32"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M18.3 5.71a.9959.9959 0 00-1.41 0L12 10.59 7.11 5.7a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
                  />
                </svg>
              </div>
            </li>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
      >
        <h5
          class="MuiTypography-root MuiTypography-h5"
        >
          Add video
        </h5>
        <div />
      </div>
      <div
        class="MuiGrid-root MuiGrid-item"
      >
        <button
          class="MuiButtonBase-root MuiButton-root makeStyles-root-34 makeStyles-root-37 MuiButton-contained MuiButton-containedPrimary MuiButton-disableElevation"
          tabindex="0"
          type="submit"
        >
          <span
            class="MuiButton-label"
          >
            <span
              class="makeStyles-inner-35 makeStyles-inner-38"
              data-testid="common-elementary-button-children"
              style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              Save training
            </span>
            <div
              class="makeStyles-loader-36"
              data-testid="common-elementary-button-loader"
              style="opacity: 0; visibility: hidden;"
            >
              <div
                class="css-0"
              >
                <div
                  class="css-1ab95gp"
                />
                <div
                  class="css-tm4xur"
                />
                <div
                  class="css-1epl0i6"
                />
                <div
                  class="css-1fj2adh"
                />
                <div
                  class="css-1vivfwt"
                />
              </div>
            </div>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <button
          class="MuiButtonBase-root MuiIconButton-root makeStyles-root-39"
          data-testid="training-form-button-remove"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V9c0-1.1-.9-2-2-2H8c-1.1 0-2 .9-2 2v10zM18 4h-2.5l-.71-.71c-.18-.18-.44-.29-.7-.29H9.91c-.26 0-.52.11-.7.29L8.5 4H6c-.55 0-1 .45-1 1s.45 1 1 1h12c.55 0 1-.45 1-1s-.45-1-1-1z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </form>
</div>
`;

exports[`<TrainingForm/> should render 1`] = `
<div>
  <form
    action="#"
    data-testid="training-form-form"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-justify-xs-flex-end"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
      >
        <div
          class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
          data-testid="training-form-name"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root makeStyles-label-2 MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-filled"
            data-shrink="false"
          >
            Enter training name
          </label>
          <div
            class="MuiInputBase-root MuiFilledInput-root makeStyles-filledRoot-1 makeStyles-filledRoot-3 MuiInputBase-fullWidth MuiInputBase-formControl"
          >
            <input
              aria-invalid="false"
              class="MuiInputBase-input MuiFilledInput-input"
              name="label"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="MuiCollapse-container MuiCollapse-hidden"
          style="min-height: 0px;"
        >
          <div
            class="MuiCollapse-wrapper"
          >
            <div
              class="MuiCollapse-wrapperInner"
            >
              <p
                class="MuiFormHelperText-root MuiFormHelperText-contained"
              >
                <span>
                  ​
                </span>
              </p>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
      >
        <div
          class="MuiGrid-root MuiBox-root MuiBox-root-13 makeStyles-wrapper-7 MuiGrid-container MuiGrid-spacing-xs-1"
          data-rbd-droppable-context-id="0"
          data-rbd-droppable-id="media-list"
        />
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
      >
        <h5
          class="MuiTypography-root MuiTypography-h5"
        >
          Add video
        </h5>
        <div />
      </div>
      <div
        class="MuiGrid-root MuiGrid-item"
      >
        <button
          class="MuiButtonBase-root MuiButton-root makeStyles-root-8 makeStyles-root-11 MuiButton-contained MuiButton-containedPrimary MuiButton-disableElevation"
          tabindex="0"
          type="submit"
        >
          <span
            class="MuiButton-label"
          >
            <span
              class="makeStyles-inner-9 makeStyles-inner-12"
              data-testid="common-elementary-button-children"
              style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              Save training
            </span>
            <div
              class="makeStyles-loader-10"
              data-testid="common-elementary-button-loader"
              style="opacity: 0; visibility: hidden;"
            >
              <div
                class="css-0"
              >
                <div
                  class="css-1ab95gp"
                />
                <div
                  class="css-tm4xur"
                />
                <div
                  class="css-1epl0i6"
                />
                <div
                  class="css-1fj2adh"
                />
                <div
                  class="css-1vivfwt"
                />
              </div>
            </div>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </form>
</div>
`;

exports[`<TrainingForm/> should submit only with label provided 1`] = `
<div>
  <form
    action="#"
    data-testid="training-form-form"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-justify-xs-flex-end"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
      >
        <div
          class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
          data-testid="training-form-name"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root makeStyles-label-15 MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-filled MuiFormLabel-filled"
            data-shrink="true"
          >
            Enter training name
          </label>
          <div
            class="MuiInputBase-root MuiFilledInput-root makeStyles-filledRoot-14 makeStyles-filledRoot-16 MuiInputBase-fullWidth MuiInputBase-formControl"
          >
            <input
              aria-invalid="false"
              class="MuiInputBase-input MuiFilledInput-input"
              name="label"
              type="text"
              value="Training label"
            />
          </div>
        </div>
        <div
          class="MuiCollapse-container"
          style="min-height: 0px; height: 0px; transition-duration: 300ms;"
        >
          <div
            class="MuiCollapse-wrapper"
          >
            <div
              class="MuiCollapse-wrapperInner"
            >
              <p
                class="MuiFormHelperText-root MuiFormHelperText-contained"
              >
                <span>
                  ​
                </span>
              </p>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
      >
        <div
          class="MuiGrid-root MuiBox-root MuiBox-root-26 makeStyles-wrapper-20 MuiGrid-container MuiGrid-spacing-xs-1"
          data-rbd-droppable-context-id="1"
          data-rbd-droppable-id="media-list"
        />
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
      >
        <h5
          class="MuiTypography-root MuiTypography-h5"
        >
          Add video
        </h5>
        <div />
      </div>
      <div
        class="MuiGrid-root MuiGrid-item"
      >
        <button
          class="MuiButtonBase-root MuiButton-root makeStyles-root-21 makeStyles-root-24 MuiButton-contained MuiButton-containedPrimary MuiButton-disableElevation"
          tabindex="0"
          type="submit"
        >
          <span
            class="MuiButton-label"
          >
            <span
              class="makeStyles-inner-22 makeStyles-inner-25"
              data-testid="common-elementary-button-children"
              style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              Save training
            </span>
            <div
              class="makeStyles-loader-23"
              data-testid="common-elementary-button-loader"
              style="opacity: 0; visibility: hidden;"
            >
              <div
                class="css-0"
              >
                <div
                  class="css-1ab95gp"
                />
                <div
                  class="css-tm4xur"
                />
                <div
                  class="css-1epl0i6"
                />
                <div
                  class="css-1fj2adh"
                />
                <div
                  class="css-1vivfwt"
                />
              </div>
            </div>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </form>
</div>
`;
